BusOne/src/objects/EM_Event_Material_vod__c.object
<CustomObject>
    <description>Used to associate materials to an individual event.</description>
    <fields>
        <fullName>Base_Language_Name_vod__c</fullName>
        <description>Used to store the material&apos;s name in the base language</description>
        <label>Base Language Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clm_Presentation_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate an event material with a CLM presentation</description>
        <label>CLM Presentation</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2 OR 3) AND 4</booleanFilter>
            <filterItems>
                <field>Clm_Presentation_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Approved_vod</value>
            </filterItems>
            <filterItems>
                <field>Clm_Presentation_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value>Staged_vod</value>
            </filterItems>
            <filterItems>
                <field>Clm_Presentation_vod__c.Status_vod__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Clm_Presentation_vod__c.Content_Channel_vod__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Clm_Presentation_vod__c</referenceTo>
        <relationshipLabel>Event Materials</relationshipLabel>
        <relationshipName>Event_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Material_Status_vod__c</fullName>
        <description>Displays the current status of the material used on the event. This uses a formula to copy the status from the Material in real-time, and can be used to run a report to discover if future events are using expired materials</description>
        <formula>Text(Material_vod__r.Status_vod__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Material Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_vod__c</fullName>
        <description>Description of the material</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Template_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate an event material with an email template</description>
        <label>Email Template</label>
        <referenceTo>Approved_Document_vod__c</referenceTo>
        <relationshipLabel>Event Materials</relationshipLabel>
        <relationshipName>Event_Materials_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The event that is associated with the material</description>
        <label>Event</label>
        <referenceTo>EM_Event_vod__c</referenceTo>
        <relationshipLabel>Event Materials</relationshipLabel>
        <relationshipName>Event_Materials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Material_Type_vod__c</fullName>
        <description>Stores the untranslated label of the record type of the material.</description>
        <label>Material Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Used_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, indicates that a material was used as part of an event</description>
        <label>Material Used</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The material being used on the event</description>
        <label>Material</label>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipLabel>Event Materials</relationshipLabel>
        <relationshipName>Event_Materials_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_vod__c</fullName>
        <description>Used to store the material&apos;s name</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subtype_vod__c</fullName>
        <description>Used to indicate the subtype of the material.</description>
        <label>Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Save_The_Date_vod</fullName>
                </value>
                <value>
                    <fullName>Reminder_vod</fullName>
                </value>
                <value>
                    <fullName>Invitation_vod</fullName>
                </value>
                <value>
                    <fullName>Follow_Up_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Material</label>
    <nameField>
        <displayFormat>EM-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Materials</pluralLabel>
    <recordTypes>
        <fullName>CLM_Presentation_vod</fullName>
        <active>true</active>
        <description>Used to store CLM presentations that are available for use on an Event.</description>
        <label>CLM_Presentation_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contract_vod</fullName>
        <active>true</active>
        <description>Used to associate contract templates to an event</description>
        <label>Contract_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Email_Template_vod</fullName>
        <active>true</active>
        <description>Used to store email templates that are available for use on an Event.</description>
        <label>Email_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Presentation_vod</fullName>
        <active>true</active>
        <description>Used to associate a presentation to an event</description>
        <label>Presentation_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Invitation_Template_vod</fullName>
        <active>true</active>
        <description>Used to associate print invitation templates to an event</description>
        <label>Print_Invitation_Template_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Print_Sign_In_Template_vod</fullName>
        <active>true</active>
        <description>Used to associate Print Sign In</description>
        <label>Print_Sign_In_Template_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>